--- a/index_list.html
+++ b/index_list.html
@@ -245,9 +245,9 @@
                         <td>AP功能：空間管理</td>
                         <td>
                             <ul>
-                                <li>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
-                                <li><font style="color:red;">(更新關聯設定)</font>1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
-                                <li><font style="color:red;">(新增)</font>1-3.租用費用管理：依檔期管理 <a href="schedulerentEdit.htm" target="_blank"></a>｜[備用]依時段管理 <a href="spacerentEdit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/8更新)</font>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/8更新)</font>1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(待更新)</font>1-3.租用費用管理：依檔期管理 <a href="schedulerentEdit.htm" target="_blank"></a><!--｜[備用]依時段管理 <a href="spacerentEdit.htm" target="_blank"></a--></li>
                                 <li>1-4.設備管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
