--- a/index_list.html
+++ b/index_list.html
@@ -103,7 +103,12 @@
                     <tr>
                         <td></td>
                         <td>登入頁</td>
-                        <td><a href="login.htm" target="_blank"></a><br>
+                        <td>
+                            <ul>
+                                <li></li>
+                                <li>TICC：<a href="login_ticc.htm" target="_blank"></a><br></li>
+                            </ul>
+                            
                             <font style="color:red;">4/28: 新增 for VOD 使用的 logo <img src="images/TJ_logo.png" style="width:30px;vertical-align:middle;">（替換登入頁和aside logo圖）；修正假文字</font>
                         </td>
                     </tr>
