--- a/index_list.html
+++ b/index_list.html
@@ -105,7 +105,7 @@
                         <td>登入頁</td>
                         <td>
                             <ul>
-                                <li></li>
+                                <li><a href="login.htm" target="_blank"></a></li>
                                 <li>TICC：<a href="login_ticc.htm" target="_blank"></a><br></li>
                             </ul>
                             
