--- a/aside_ticc.htm
+++ b/aside_ticc.htm
@@ -130,6 +130,7 @@
                 </a>
                 <ul>
                     <li><a href="space_list.htm"><span>空間管理</span></a></li>
+                    <li><a href="equipment_list.htm"><span>設備管理</span></a></li>
                     <li><a href="reservationList.htm"><span>預約管理</span></a></li>
                     <li><a href="contactList.htm"><span>聯絡我們管理</span></a></li>
                 </ul>
