--- a/index_list.html
+++ b/index_list.html
@@ -263,8 +263,8 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
-                                <li>2-1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
-                                <li>2-2.預約聯繫與管理 <a href="#" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/15更新)</font>2-1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/15更新)</font>2-2.預約聯繫與管理 <a href="reservationEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
