--- a/reservationEdit.htm
+++ b/reservationEdit.htm
@@ -342,6 +342,18 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                    <div class="form_grp" style="margin-top:20px;">
+                                                        <div class="form_content form_inline">
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="922 XX銀行" class="dynamicCol used" disabled>
+                                                                <label>匯款銀行</label>
+                                                            </div>
+                                                            <div class="labelEffect">
+                                                                <input name="" type="text" value="12345" disabled>
+                                                                <label>匯款帳號後五碼</label>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                     <div class="form_grp">
                                                         <h5 class="form_title">客戶端回傳檔案</h5>
                                                         <ol style="margin-top:2em;">
