--- a/index_list.html
+++ b/index_list.html
@@ -273,8 +273,8 @@
                         <td>AP功能：聯絡我們管理</td>
                         <td>
                             <ul>
-                                <li>3-1.聯絡紀錄 <a href="contactList.htm" target="_blank"></a></li>
-                                <li>3-2.回覆與管理 <a href="contactEdit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/16更新)</font>3-1.聯絡紀錄 <a href="contactList.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(8/16更新)</font>3-2.回覆與管理 <a href="contactEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
