--- a/contactEdit.htm
+++ b/contactEdit.htm
@@ -342,10 +342,10 @@
                                     <div class="flex-form">
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <select name="">
+                                                <select name="" disabled>
                                                     <option value="" selected="" disabled="disabled"></option>
-                                                    <option value="選項1" disabled selected>待回覆</option>
-                                                    <option value="選項2" disabled>已回覆</option>
+                                                    <option value="選項1" selected>待回覆</option>
+                                                    <option value="選項2">已回覆</option>
                                                     <option value="選項3">結案</option>
                                                 </select>
                                             </div>
