--- a/index_list.html
+++ b/index_list.html
@@ -263,8 +263,21 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
-                                <li><font style="color:red;">(8/15更新)</font>2-1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
-                                <li><font style="color:red;">(8/15更新)</font>2-2.預約聯繫與管理 <a href="reservationEdit.htm" target="_blank"></a></li>
+                                <li>版本一：
+                                    <ol>
+                                        <li><font style="color:red;">(8/15更新)</font>2-1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
+                                        <li><font style="color:red;">(8/15更新)</font>2-2.預約聯繫與管理 <a href="reservationEdit.htm" target="_blank"></a></li>
+                                    </ol>
+                                </li>
+                                <li>版本二：
+                                    <ol>
+                                        <li><font style="color:red;">(8/19更新)</font>2-3.預約清單 <a href="reservationList_update.htm" target="_blank"></a></li>
+                                        <li><font style="color:red;">(8/19更新)</font>2-4.預約管理 <a href="reservationEdit_update.htm" target="_blank"></a></li>
+                                        <li><font style="color:red;">(8/23更新)</font>2-5.(預約)聯絡紀錄 <a href="reservationEdit_activity.htm" target="_blank"></a></li>
+                                        <li><font style="color:red;">(8/23更新)</font>2-4.(預約)活動資料 <a href="reservationEdit_contact.htm" target="_blank"></a></li>
+                                    </ol>
+                                </li>
+                                
                             </ul>
                         </td>
                     </tr>
